--- a/get_together/templates/get_together/base.html
+++ b/get_together/templates/get_together/base.html
@@ -12,16 +12,16 @@
   <!-- <link rel="icon" href="{% static 'images/iconv1_64.png' %}"> -->
 
   <!-- FAVICON STARTS -->
-  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
-  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
-  <link rel="icon" type="image/png" sizes="192x192" href="{% static 'favicon/android-chrome-192x192.png' %}">
-  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
-  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
-  <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg" color="#384244' %}">
+  <!-- <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}"> -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}"> -->
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="{% static 'favicon/android-chrome-192x192.png' %}"> -->
+  <!-- <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}"> -->
+  <!-- <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}"> -->
+  <!-- <link rel="mask-icon" href="{% static 'favicon/safari-pinned-tab.svg" color="#384244' %}"> -->
   <meta name="apple-mobile-web-app-title" content="GetTogether">
   <meta name="application-name" content="GetTogether">
   <meta name="msapplication-TileColor" content="#2d89ef">
-  <meta name="msapplication-TileImage" content="{% static 'favicon/mstile-144x144.png' %}">
+  <!-- <meta name="msapplication-TileImage" content="{% static 'favicon/mstile-144x144.png' %}"> -->
   <meta name="theme-color" content="#ffffff">
   <!-- FAVICON ENDS -->
 
@@ -75,86 +75,11 @@
 </head>
 
 <body>
-
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/"><img src="{% static theme.images.nav_logo %}" /></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li
-          class="nav-item{% if request.resolver_match.url_name == "events" or request.resolver_match.url_name == "all-events" %} active{% endif %}">
-          <a class="nav-link" href="{% url 'events' %}"><i class="far fa-calendar-alt"></i>
-            {% trans "Events" %}{% if request.resolver_match.url_name == "events" %} <span
-              class="sr-only">(current)</span>{% endif %}</a>
-        </li>
-        <li
-          class="nav-item{% if request.resolver_match.url_name == "teams" or request.resolver_match.url_name == "all-teams" %} active{% endif %}">
-          <a class="nav-link" href="{% url 'teams' %}"><i class="fa fa-users"></i>
-            {% trans "Teams" %}{% if request.resolver_match.url_name == "teams" %} <span
-              class="sr-only">(current)</span>{% endif %}</a>
-        </li>
-        {% comment %}
-        <li class="nav-item{% if request.resolver_match.url_name == "places" %} active{% endif %}">
-          <a class="nav-link" href="{% url 'places' %}">Places{% if request.resolver_match.url_name == "places" %} <span
-              class="sr-only">(current)</span>{% endif %}</a>
-        </li>
-        {% endcomment %}
-      </ul>
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="btn btn-primary" href="{% url 'new-event-start' %}"><i
-              class="{{ theme.actions.host_event.icon }}"></i> {{ theme.actions.host_event.label }}</a>
-        </li>
-        {% if request.user.is_authenticated %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarUserMenuLink" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            <img class="rounded-circle mr-1" src="{{request.user.profile.avatar_url}}"
-              height="24px" />{% if request.user.profile.realname %}{{ request.user.profile.realname }}{% else %}{{ request.user.username }}{% endif %}
-          </a>
-          <div class="dropdown-menu" aria-labelledby="navbarUserMenuLink">
-            <a class="dropdown-item" href="{% url 'show-profile' request.user.profile.id %}"><i class="fa fa-user"></i>
-              {% trans "Profile" %}</a>
-            <a class="dropdown-item" href="{% url 'logout' %}"><i class="fa fa-sign-out-alt"></i>
-              {% trans "Logout" %}</a>
-          </div>
-        </li>
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">{% trans "Signup or Login" %}</a></li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
+  {% include './_navigation.html' %}
 
   <main role="main" class="container">
+    {% include './_messages.html' %}
 
-    {% block account_setup_alert %}
-    {% if account_needs_setup %}
-    <div class="alerts">
-      <div class="alert alert-warning">
-        {% blocktrans %}<a href="{{account_setup_url}}">Click here</a> to finish your account setup.{% endblocktrans %}
-      </div>
-    </div>
-    {% endif %}
-    {% endblock %}
-
-    {% if tip %}
-    <div class="alerts">
-      <div class="alert {{ tip.tags }}"><strong>{% trans "Tip:" %} </strong>{{ tip.text|safe }}</div>
-    </div>
-    {% endif %}
-
-    {% if messages %}
-    <div class="alerts">
-      {% for message in messages %}
-      <div class="alert{% if message.tags %} {{ message.tags }}{% endif %}">{{ message }}</div>
-      {% endfor %}
-    </div>
-    {% endif %}
 
     {% block content %}{% endblock %}
   </main>
