--- a/get_together/templates/get_together/new_team/define_team.html
+++ b/get_together/templates/get_together/new_team/define_team.html
@@ -1,19 +1,13 @@
 {% extends "get_together/base.html" %}
-{% load static i18n %}
+{% load static i18n crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <center>
-                <h3>{% trans "Tell people more about your team" %}</h3>
-                <form action="{% url "define-team" team.id %}" method="post" class="form">
-                {% csrf_token %}
-                <p>{% include "events/define_team_form.html" %}</p>
-                <p><button type="submit" class="btn btn-primary">{% trans "Continue" %}</button></p>
-                </form>
-            </center>
-        </div>
-    </div>
-</div>
+
+<h3>{% trans "Tell people more about your team" %}</h3>
+<form action="{% url "define-team" team.id %}" method="post" class="form">
+    {% csrf_token %}
+    {{ team_form |  crispy }}
+    <p><button type="submit" class="btn btn-primary">{% trans "Continue" %}</button></p>
+</form>
+
 {% endblock %}
