--- a/get_together/templates/get_together/new_team/start_new_team.html
+++ b/get_together/templates/get_together/new_team/start_new_team.html
@@ -1,53 +1,24 @@
 {% extends "get_together/base.html" %}
-{% load static i18n %}
+{% load static i18n crispy_forms_tags %}
 
 {% block content %}
 <div class="container">
-    <div class="row">
-        <div class="col-12">
-            <center>
-                <h3>{% trans "Pick a name and location for your new team" %}</h3>
+    <h3>{% trans "Pick a name and location for your new team" %}</h3>
 
-                <form action="{% url "create-team" %}" method="post" enctype="multipart/form-data" class="form">
-                {% csrf_token %}
-                {% if team.organization %}<input type="hidden" name="organization" value="{{team.organization.id}}" />{% endif %}
-                {% if event %}<input type="hidden" name="event" value="{{event}}" />{% endif %}
-                <p>{% include "events/new_team_form.html" %}</p>
-                <p><button type="submit" class="btn btn-primary">{% trans "Continue" %}</button></p>
-                </form>
-            </center>
-        </div>
-    </div>
+    <form action="{% url "create-team" %}" method="post" enctype="multipart/form-data" class="form">
+        {% csrf_token %}
+
+        {% if team.organization %}
+        <input type="hidden" name="organization" value="{{team.organization.id}}" />
+        {% endif %}
+
+        {% if event %}
+        <input type="hidden" name="event" value="{{event}}" />
+        {% endif %}
+
+        {{ team_form | crispy }}
+
+        <p><button type="submit" class="btn btn-primary">{% trans "Continue" %}</button></p>
+    </form>
 </div>
-{% endblock %}
-
-{% block javascript %}
-<script src="{% static 'js/jquery-ui-lookup.js' %}"></script>
-<script type="text/javascript">
-$(document).ready(function(){
-    $("#city_select").lookup({
-        search: function(searchText, callback) {
-        if (searchText.length < 3) return callback(searchText, []);
-            $.getJSON("/api/cities/?q="+searchText, function(data) {
-                var m = this.url.match(/q=([^&]+)/);
-                var q = "";
-                if (m && m.length > 0) {
-                    q = this.url.match(/q=([^&]+)/)[1]
-                }
-
-                return callback(q, data);
-            });
-        },
-        select: function( event, ui ) {
-          $("#id_tz").val(ui.data.tz);
-          $("#id_tz").selectmenu("refresh");
-        }
-    })
-    $("#id_category").selectmenu();
-    $("#id_tz").selectmenu();
-    $("#id_access").selectmenu();
-
-});
-</script>
-
 {% endblock %}
